samples/_failures_safe/1761598732_f6bf13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_565a2e16.c: In function ‘main’:
./samples/SAFE/__tmp_565a2e16.c:158:13: error: expected expression at end of input
  158 |             case
      |             ^~~~
./samples/SAFE/__tmp_565a2e16.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_565a2e16.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_565a2e16.c:158:13: error: expected declaration or statement at end of input
